k8-deploy/hasura/dev/hasura-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hasura
    hasuraService: custom
  name: hasura
  namespace: pdx-gun-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      labels:
        app: hasura
    spec:
      containers:
        - image: hasura/graphql-engine:v1.1.0
          imagePullPolicy: IfNotPresent
          name: hasura
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources: {}
