k8-deploy/hasura/dev/hasura-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hasura
  labels:
    app: hasura
  namespace: pdx-gun-dev
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: hasura
  type: ClusterIP  # To use an Ingress Controller
