k8-deploy/hasura/dev/hasura-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hasura-ingress
  namespace: pdx-gun-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - host:
      http:
        paths:
          - path: /pdxfinder/dev/pdx-gun(/|$)(.*)
            backend:
              serviceName: hasura
              servicePort: 80
